# tributary

./: .cspellrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  kani.yml
app/: package-lock.json  package.json
app/src/: styles.css
app/src/components/: CreateSplit.test.tsx  EscrowCard.tsx  LanguageSwitcher.tsx  ManageSplit.test.tsx  ManageSplit.tsx  PaySplit.tsx  RecipientEditor.tsx  TokenPicker.tsx
app/src/lib/: i18n.test.tsx  i18n.ts  i18n.tsx  tributary.test.ts  tributary.ts
contracts/splitter/: baseline.json
contracts/splitter-proofs/: Cargo.toml
contracts/splitter-proofs/src/: lib.rs  model.rs  mutants.rs  proofs.rs  reference.rs
contracts/splitter/src/: lib.rs  math.rs  test.rs
contracts/splitter/src/test/: budget.rs
docs/: formal-verification.md
indexer/: README.md  index.mjs
scripts/: check_metrics.js  deploy.sh  kani-mutation-check.sh
sdk/: package-lock.json  package.json
